<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/nav_box" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="24dp">

                <Button
                    android:id="@+id/htp_btn_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:drawableLeft="@drawable/exit_img"
                    android:padding="5dp"
                    android:text="@string/htp_btn_return"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

            </LinearLayout>
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:orientation="vertical"
                android:padding="50dp"
                android:scrollbars="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/htp_header"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:background="@drawable/pop_up_box"
                        android:paddingLeft="20dp"
                        android:paddingTop="70dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="50dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="50dp">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/htp_text_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/htp_text1"
                                android:textColor="@color/black" />
                        </LinearLayout>
                    </FrameLayout>

                    <ImageView
                        android:id="@+id/htp_img"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:contentDescription="@string/htp_img_description"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/htp1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <Button
                        android:id="@+id/htp_btn_previous"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableLeft="@drawable/previous_"
                        android:padding="5dp"
                        android:text="@string/htp_btn_previous"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/htp_btn_next"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableRight="@drawable/next_"
                        android:padding="5dp"
                        android:text="@string/htp_btn_next"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>